Fix gap between editors in property grid (#6310)

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
@@ -60,7 +60,7 @@
   }
 
   .spg-row--multiple {
-    margin-top: calcSize(1);
+    margin-top: var(--ctr-editor-layout-gap, calcSize(1));
   }
 }
 .spg-panel__content > .spg-row:first-of-type {
